# NoobAI

./: .gitignore  README.md  pyproject.toml
docs/: TD3_eval.md  llm_test.md
noobai/data/: util.py
noobai/datasets/nlp/: book.py  qa.py
noobai/model/mamba/: __init__.py
noobai/model/mamba/model/: __init__.py  simple.py
noobai/model/rl/: Delay.py  PPO.py  TD3.py  parallel_env.py  replay_buffer.py  reply_buffer.py  utils.py
noobai/model/sam/: __init__.py  main.py
noobai/module/nn/: __init__.py  loss.py  resblock.py
noobai/module/nn/modules/: normalization.py
noobai/nn/: __init__.py  embed.py  examples.py  llama.py  loss.py  lr_scheduler.py  resblock.py  util.py
noobai/nn/modules/: __init__.py  activation.py  normalization.py
noobai/nn/optim/: __init__.py
noobai/real_apply/nlp/: toy_run.py
noobai/real_apply/rl/: Delay_rl.py  PPO.py  TD3.py  config.py
noobai/task/memory/: number_recall.py
noobai/util/: thread.py  trainer.py
noobai/util/plot/: __init__.py
simpleai/data/: util.py
simpleai/datasets/cv/: classify.py
simpleai/datasets/nlp/: book.py  qa.py  translate.py
simpleai/model/sam/: main.py  model.py
simpleai/model/sam/configs/: number_recall.json
simpleai/module/nn/: loss.py
simpleai/task/memory/: number_recall.py
simpleai/util/: trainer.py
