[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'simpleai'
authors = [{ name = '蓝白bw', email = '2846131442@qq.com' }]
version = '0.0.2'
description = 'Simple ai tools created by 蓝白bw'
license = { file = "LICENSE" }
dependencies = ['torch', 'numpy', 'tqdm']

[tool.setuptools]
py-modules = ["simpleai"]
# package-dir ={ "" = "./simpleai" }

[tool.setuptools.packages.find]
include = ["simpleai*"]

[tool.setuptools.package-data]
"*" = ["*.json"]